fix(ai): fix all AI module issues - security, permissions, build errors
- Register AI endpoints in SecurityConfig with proper authorities (ai:chatbot:use,
  ai:fraud:analyse, ai:forecast:run, ai:config:manage, etc.)
- Add AI_FEATURES to PermissionCategory enum
- Register all AI permissions in PermissionRegistry following existing module pattern
- Add AI audit actions to AuditAction enum (AI_FRAUD_ANALYSED, AI_CHURN_PREDICTED, etc.)
- Add ChatClient @Bean to AiModuleConfig (required for AiOrchestrator injection)
- Fix getGenerationTokens() → getCompletionTokens() for Spring AI 1.0 compatibility
- Fix turns.getLast() → turns.get(turns.size()-1) for Java compatibility
- Fix ProductAttribute.getValue() → String.join(", ", attr.getValues())
- Rename ai/service/DemandForecastService → AiDemandForecastService to eliminate
  duplicate bean conflict with inventory/forecast/service/DemandForecastService
- Fix arrow function in ai-nl-report.html: showData.update(v => !v)
  replaced with toggleShowData() method call (arrow fns not supported in Angular templates)

https://claude.ai/code/session_01VQ2ZPvH3FqPbPQdbwtot1k